Added packet project.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-/NetSecFinal/nbproject/private/
 /authclient/nbproject/private/
 /authserver/nbproject/private/
+/TCPPackets/dist/
+/TCPPackets/nbproject/private/
+/AuthPackets/dist/
+/AuthPackets/nbproject/private/
+/packets/TCPPackets/build/
+/packets/TCPPackets/dist/
+/packets/TCPPackets/nbproject/private/
+/packets/nbproject/private/
