Added packet dependencies.

--- a/authserver/nbproject/project.properties
+++ b/authserver/nbproject/project.properties
@@ -41,8 +41,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.merrimackutil.jar}:\
-    ${reference.Packets.jar}:\
-    ${file.reference.bcprov-jdk18on-172.jar}
+    ${file.reference.bcprov-jdk18on-172.jar}:\
+    ${reference.packets.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -83,8 +83,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.Packets=../../hancock_project5/Packets
-reference.Packets.jar=${project.Packets}/dist/Packets.jar
+project.packets=../packets
+reference.packets.jar=${project.packets}/dist/packets.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
