--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=authclient
+application.title=client
 application.vendor=willi
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,18 +29,18 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/authclient.jar
+dist.jar=${dist.dir}/client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/authclient
+dist.jlink.output=${dist.jlink.dir}/client
 endorsed.classpath=
 excludes=
-file.reference.merrimackutil.jar=lib/merrimackutil.jar
+file.reference.merrimackutil.jar=lib\\merrimackutil.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.merrimackutil.jar}:\
-    ${reference.Packets.jar}
+    ${reference.packets.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,14 +75,14 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=authclient
+jlink.launcher.name=client
 main.class=twoauth.Client
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.Packets=../../hancock_project5/Packets
-reference.Packets.jar=${project.Packets}/dist/Packets.jar
+project.packets=../packets
+reference.packets.jar=${project.packets}/dist/packets.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
