--- a/authserver/nbproject/project.properties
+++ b/authserver/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=authserver
+application.title=cloudserver
 application.vendor=willi
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/authserver.jar
+dist.jar=${dist.dir}/cloudserver.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/authserver
+dist.jlink.output=${dist.jlink.dir}/cloudserver
 endorsed.classpath=
 excludes=
 file.reference.bcprov-jdk18on-172.jar=lib/bcprov-jdk18on-172.jar
@@ -77,7 +77,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=authserver
+jlink.launcher.name=cloudserver
 main.class=twoauth.Server
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
