Constructed doccument class.

--- a/cloudserver/nbproject/private/private.properties
+++ b/cloudserver/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\willi\\AppData\\Roaming\\NetBeans\\16\\build.properties
+user.properties.file=C:\\Users\\Alex\\AppData\\Roaming\\NetBeans\\16\\build.properties
