--- a/KDCServer/nbproject/project.properties
+++ b/KDCServer/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=KDCServer
+application.vendor=Mark Case
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,19 +29,20 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/KDC.jar
+dist.jar=${dist.dir}/KDCServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/KDC
+dist.jlink.output=${dist.jlink.dir}/KDCServer
+endorsed.classpath=
 excludes=
-file.reference.bcprov-jdk18on-172.jar=lib\\bcprov-jdk18on-172.jar
-file.reference.merrimackutil.jar=lib\\merrimackutil.jar
+file.reference.bcprov-jdk18on-172.jar=lib/bcprov-jdk18on-172.jar
+file.reference.merrimackutil.jar=lib/merrimackutil.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.packets.jar}:\
     ${file.reference.bcprov-jdk18on-172.jar}:\
-    ${file.reference.merrimackutil.jar}
+    ${file.reference.merrimackutil.jar}:\
+    ${reference.packets.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -49,8 +51,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=19
-javac.target=19
+javac.source=18
+javac.target=18
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -75,8 +77,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=KDC
-main.class=kdc.KDC
+jlink.launcher.name=KDCServer
+main.class=KDCServer.KDCServer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
