--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/client
 endorsed.classpath=
 excludes=
+file.reference.bcprov-jdk18on-172.jar=lib\\bcprov-jdk18on-172.jar
 file.reference.merrimackutil.jar=lib\\merrimackutil.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.merrimackutil.jar}:\
-    ${reference.packets.jar}
+    ${reference.packets.jar}:\
+    ${file.reference.bcprov-jdk18on-172.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
