--- a/cloudserver/config.json
+++ b/cloudserver/config.json
@@ -1,6 +1,6 @@
 {
   "port" : 5001,
   "debug" : false,
-  "service-name" : "echoservice",
+  "service-name" : "cloudservice",
   "service-secret" : "servicepass"
 }
