--- a/cloudserver/nbproject/private/private.properties
+++ b/cloudserver/nbproject/private/private.properties
@@ -1,4 +1,5 @@
-compile.on.save=false
+application.args=-c config.json -a sslconfig.json
+compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
@@ -6,3 +7,4 @@ javac.debug=true
 javadoc.preview=true
 jlink.strip=false
 user.properties.file=C:\\Users\\willi\\AppData\\Roaming\\NetBeans\\16\\build.properties
+work.dir=C:\\Users\\willi\\Documents\\NetBeansProjects\\NetSecFinal\\cloudserver
