--- a/cloudserver/nbproject/project.properties
+++ b/cloudserver/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=cloudserver
-application.vendor=willi
+application.vendor=Mark Case
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -35,14 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/cloudserver
 endorsed.classpath=
 excludes=
-file.reference.bcprov-jdk18on-172.jar=lib/bcprov-jdk18on-172.jar
+file.reference.bcprov-jdk18on-172.jar=../KDCServer/lib/bcprov-jdk18on-172.jar
 file.reference.merrimackutil.jar=lib/merrimackutil.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${reference.packets.jar}:\
     ${file.reference.merrimackutil.jar}:\
-    ${file.reference.bcprov-jdk18on-172.jar}:\
-    ${reference.packets.jar}
+    ${file.reference.bcprov-jdk18on-172.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,12 +78,14 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=cloudserver
-main.class=twoauth.Server
+main.class=cloudservice.EchoService
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Packets=../Packets
 project.packets=../packets
+reference.Packets.jar=${project.Packets}/dist/Packets.jar
 reference.packets.jar=${project.packets}/dist/packets.jar
 run.classpath=\
     ${javac.classpath}:\
