Added Tokens and basic Database/Entry model.

--- a/SSE/nbproject/project.properties
+++ b/SSE/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SSE
 excludes=
+file.reference.bcprov-jdk18on-172.jar=lib\\bcprov-jdk18on-172.jar
+file.reference.merrimackutil.jar=lib\\merrimackutil.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.bcprov-jdk18on-172.jar}:\
+    ${file.reference.merrimackutil.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
