Added SSE as a library for client & cloudserver.

--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -42,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.merrimackutil.jar}:\
     ${reference.packets.jar}:\
-    ${file.reference.bcprov-jdk18on-172.jar}
+    ${file.reference.bcprov-jdk18on-172.jar}:\
+    ${reference.SSE.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -84,7 +85,9 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.packets=../packets
+project.SSE=../SSE
 reference.packets.jar=${project.packets}/dist/packets.jar
+reference.SSE.jar=${project.SSE}/dist/SSE.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
