--- a/cloudserver/nbproject/project.properties
+++ b/cloudserver/nbproject/project.properties
@@ -42,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${reference.packets.jar}:\
     ${file.reference.merrimackutil.jar}:\
-    ${file.reference.bcprov-jdk18on-172.jar}
+    ${file.reference.bcprov-jdk18on-172.jar}:\
+    ${reference.SSE.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -85,8 +86,10 @@ mkdist.disabled=false
 platform.active=default_platform
 project.Packets=../Packets
 project.packets=../packets
+project.SSE=../SSE
 reference.Packets.jar=${project.Packets}/dist/Packets.jar
 reference.packets.jar=${project.packets}/dist/packets.jar
+reference.SSE.jar=${project.SSE}/dist/SSE.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
