--- a/SSE/nbproject/project.properties
+++ b/SSE/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SSE
+application.vendor=Alex
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/SSE.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SSE
+endorsed.classpath=
 excludes=
 file.reference.bcprov-jdk18on-172.jar=lib\\bcprov-jdk18on-172.jar
 file.reference.merrimackutil.jar=lib\\merrimackutil.jar
@@ -39,7 +41,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.bcprov-jdk18on-172.jar}:\
-    ${file.reference.merrimackutil.jar}
+    ${file.reference.merrimackutil.jar}:\
+    ${reference.packets.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -80,6 +83,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.packets=../packets
+reference.packets.jar=${project.packets}/dist/packets.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
