--- a/cloudserver/config.json
+++ b/cloudserver/config.json
@@ -2,5 +2,6 @@
   "port" : 5001,
   "debug" : false,
   "service-name" : "cloudservice",
-  "service-secret" : "servicepass"
+  "service-secret" : "servicepass",
+  "db_loc": "database.json"
 }
